--- a/main/resources/view/dashboardForm.fxml
+++ b/main/resources/view/dashboardForm.fxml
@@ -15,9 +15,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="dashboardWindow" prefHeight="494.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.controller.CustomerDetailsFromController">
+<AnchorPane fx:id="dashboardWindow" prefHeight="494.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.controller.DashboardFormController">
    <children>
-      <Text layoutX="37.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify" wrappingWidth="158.24601026399273">
+      <Text layoutX="548.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify" wrappingWidth="158.24601026399273">
          <font>
             <Font name="Apple LiGothic Medium" size="54.0" />
          </font>
@@ -41,7 +41,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Text>
-      <Text layoutX="94.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Branderd Wear" wrappingWidth="75.60421181185234">
+      <Text layoutX="605.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Branderd Wear" wrappingWidth="75.60421181185234">
          <font>
             <Font name="Apple LiGothic Medium" size="11.0" />
          </font>
@@ -65,9 +65,8 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Text>
-      <Separator layoutX="505.0" layoutY="53.0" prefHeight="18.0" prefWidth="200.0" />
-      <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#c2cdd71a" height="286.0" layoutX="17.0" layoutY="105.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.2" width="269.0" />
-      <JFXButton fx:id="btnManageEmployee" layoutX="64.0" layoutY="167.0" onAction="#btnManageEmployeeOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Manage Employee" textFill="WHITE">
+      <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#c2cdd71a" height="286.0" layoutX="567.0" layoutY="113.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.2" width="173.0" />
+      <JFXButton fx:id="btnManageEmployee" layoutX="544.0" layoutY="176.0" onAction="#btnManageEmployeeOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Manage Employee" textFill="WHITE">
          <font>
             <Font name="Apple LiGothic Medium" size="17.0" />
          </font>
@@ -75,7 +74,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton fx:id="btnOrderDetails" layoutX="64.0" layoutY="209.0" onAction="#btnOrderDetailsOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Order Details" textFill="WHITE">
+      <JFXButton fx:id="btnOrderDetails" layoutX="544.0" layoutY="218.0" onAction="#btnOrderDetailsOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Order Details" textFill="WHITE">
          <font>
             <Font name="Apple LiGothic Medium" size="17.0" />
          </font>
@@ -83,7 +82,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton fx:id="btnProductDetails" layoutX="64.0" layoutY="251.0" onAction="#btnProductDetailsOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Product Details" textFill="WHITE">
+      <JFXButton fx:id="btnProductDetails" layoutX="544.0" layoutY="260.0" onAction="#btnProductDetailsOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Product Details" textFill="WHITE">
          <font>
             <Font name="Apple LiGothic Medium" size="17.0" />
          </font>
@@ -91,7 +90,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton fx:id="btnCustomerDetails" layoutX="64.0" layoutY="293.0" onAction="#btnCustomerDetailsOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Customer Details" textFill="WHITE">
+      <JFXButton fx:id="btnCustomerDetails" layoutX="544.0" layoutY="302.0" onAction="#btnCustomerDetailsOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Customer Details" textFill="WHITE">
          <font>
             <Font name="Apple LiGothic Medium" size="17.0" />
          </font>
@@ -99,7 +98,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton fx:id="btnSupplierDetails" layoutX="64.0" layoutY="335.0" onAction="#btnSuplierDetailsOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Supplier Details" textFill="WHITE">
+      <JFXButton fx:id="btnSupplierDetails" layoutX="544.0" layoutY="344.0" onAction="#btnSuplierDetailsOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Supplier Details" textFill="WHITE">
          <font>
             <Font name="Apple LiGothic Medium" size="17.0" />
          </font>
@@ -107,7 +106,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton fx:id="btnPlaceOrder" layoutX="64.0" layoutY="125.0" onAction="#btnPlaceOrderOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Place Order " textFill="WHITE">
+      <JFXButton fx:id="btnPlaceOrder" layoutX="544.0" layoutY="134.0" onAction="#btnPlaceOrderOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Place Order " textFill="WHITE">
          <font>
             <Font name="Apple LiGothic Medium" size="17.0" />
          </font>
@@ -115,11 +114,6 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <Text layoutX="447.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DASHBOARD" textAlignment="CENTER" wrappingWidth="259.78781306164274">
-         <font>
-            <Font name="Apple LiGothic Medium" size="38.0" />
-         </font>
-      </Text>
       <ImageView fitHeight="13.0" fitWidth="12.0" layoutX="633.0" layoutY="455.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../img/icons8-email-100.png" />
@@ -150,7 +144,7 @@
             <Font name="Apple LiGothic Medium" size="9.0" />
          </font>
       </Text>
-      <Text layoutX="35.0" layoutY="456.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify Store" wrappingWidth="62.141940125837436">
+      <Text layoutX="38.0" layoutY="456.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify Store" wrappingWidth="62.141940125837436">
          <font>
             <Font name="Apple LiGothic Medium" size="19.0" />
          </font>
@@ -158,13 +152,13 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Text>
-      <Text layoutX="61.0" layoutY="474.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(PVT) Ltd." textAlignment="CENTER" wrappingWidth="42.126320091813966">
+      <Text layoutX="67.0" layoutY="474.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(PVT) Ltd." textAlignment="CENTER" wrappingWidth="42.126320091813966">
          <font>
             <Font name="Apple LiGothic Medium" size="7.0" />
          </font>
       </Text>
       <Rectangle arcHeight="10.0" arcWidth="10.0" height="36.0" layoutX="628.0" layoutY="443.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1.0" />
-      <Separator layoutX="25.0" layoutY="419.0" prefHeight="18.0" prefWidth="723.0" />
+      <Separator layoutX="53.0" layoutY="419.0" prefHeight="18.0" prefWidth="695.0" />
       <Hyperlink layoutX="535.0" layoutY="454.0" text="Terms" textFill="RED">
          <font>
             <Font name="Apple LiGothic Medium" size="12.0" />
@@ -308,31 +302,80 @@
          </cursor>
       </ImageView>
       <Separator layoutX="376.0" layoutY="443.0" orientation="VERTICAL" prefHeight="41.0" prefWidth="6.0" />
-      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="675.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../img/icons8-dashboard-100.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="266.0" fitWidth="246.0" layoutX="305.0" layoutY="99.0" pickOnBounds="true" preserveRatio="true" style="-fx-translate-z: 10;">
-         <image>
-            <Image url="@../img/pexels-lum3n-44775-322207.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="71.0" fitWidth="200.0" layoutX="332.0" layoutY="357.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="330.0" fitWidth="168.0" layoutX="567.0" layoutY="99.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="79.0" layoutY="76.0" pickOnBounds="true" preserveRatio="true" />
+      <Rectangle arcHeight="70.0" arcWidth="70.0" fill="#1f93ff00" height="325.0" layoutX="32.0" layoutY="44.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.2" width="466.0" />
+      <ImageView fitHeight="306.0" fitWidth="191.0" layoutX="72.0" layoutY="68.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../img/pexels-jibarofoto-13536936.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="133.0" fitWidth="169.0" layoutX="381.0" layoutY="271.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="204.0" fitWidth="225.0" layoutX="248.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../img/pexels-mart-production-7679725.jpg" />
+            <Image url="@../img/pexels-tkirkgoz-18699686.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="127.0" fitWidth="62.0" layoutX="306.0" layoutY="271.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="102.0" fitWidth="211.0" layoutX="248.0" layoutY="273.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../img/pexels-pixabay-52518.jpg" />
+            <Image url="@../img/pexels-lum3n-44775-322207.jpg" />
          </image>
       </ImageView>
+      <Text layoutX="424.0" layoutY="133.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2024" wrappingWidth="43.29299551934787">
+         <font>
+            <Font name="Apple LiGothic Medium" size="73.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <fill>
+            <LinearGradient endX="1.0" endY="1.0" startX="0.22802850356294538" startY="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.3719512195121951">
+                     <color>
+                        <Color red="0.7099999785423279" green="0.0142000000923872" blue="0.219953253865242" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.75" green="0.0520833320915699" blue="0.0520833320915699" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Text>
+      <Text layoutX="439.0" layoutY="388.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New Collection" wrappingWidth="110.36826431462055">
+         <font>
+            <Font name="Apple LiGothic Medium" size="22.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <fill>
+            <LinearGradient endX="1.0" endY="1.0" startX="0.22802850356294538" startY="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.3719512195121951">
+                     <color>
+                        <Color red="0.7099999785423279" green="0.0142000000923872" blue="0.219953253865242" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.75" green="0.0520833320915699" blue="0.0520833320915699" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Text>
    </children>
 </AnchorPane>
