--- a/main/resources/view/forgotPasswordForm.fxml
+++ b/main/resources/view/forgotPasswordForm.fxml
@@ -17,9 +17,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="dashboardWindow" prefHeight="494.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.controller.CustomerDetailsFromController">
+<AnchorPane fx:id="dashboardWindow" prefHeight="494.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.controller.ForgotPasswordFormController">
    <children>
-      <Text layoutX="296.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify" textAlignment="CENTER" wrappingWidth="158.24601026399273">
+      <Text layoutX="439.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify" textAlignment="CENTER" wrappingWidth="158.24601026399273">
          <font>
             <Font name="Apple LiGothic Medium" size="54.0" />
          </font>
@@ -43,7 +43,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Text>
-      <Text layoutX="353.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Branderd Wear" textAlignment="CENTER" wrappingWidth="75.60421181185234">
+      <Text layoutX="496.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Branderd Wear" textAlignment="CENTER" wrappingWidth="75.60421181185234">
          <font>
             <Font name="Apple LiGothic Medium" size="11.0" />
          </font>
@@ -97,7 +97,7 @@
             <Font name="Apple LiGothic Medium" size="9.0" />
          </font>
       </Text>
-      <Text layoutX="35.0" layoutY="456.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify Store" wrappingWidth="62.141940125837436">
+      <Text layoutX="44.0" layoutY="456.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify Store" wrappingWidth="62.141940125837436">
          <font>
             <Font name="Apple LiGothic Medium" size="19.0" />
          </font>
@@ -105,13 +105,12 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Text>
-      <Text layoutX="61.0" layoutY="474.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(PVT) Ltd." textAlignment="CENTER" wrappingWidth="42.126320091813966">
+      <Text layoutX="70.0" layoutY="474.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(PVT) Ltd." textAlignment="CENTER" wrappingWidth="42.126320091813966">
          <font>
             <Font name="Apple LiGothic Medium" size="7.0" />
          </font>
       </Text>
-      <Rectangle arcHeight="10.0" arcWidth="10.0" height="36.0" layoutX="628.0" layoutY="443.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1.0" />
-      <Separator layoutX="25.0" layoutY="419.0" prefHeight="18.0" prefWidth="723.0" />
+      <Separator layoutX="25.0" layoutY="418.0" prefHeight="18.0" prefWidth="723.0" />
       <Hyperlink layoutX="535.0" layoutY="454.0" text="Terms" textFill="RED">
          <font>
             <Font name="Apple LiGothic Medium" size="12.0" />
@@ -255,7 +254,8 @@
          </cursor>
       </ImageView>
       <Separator layoutX="376.0" layoutY="443.0" orientation="VERTICAL" prefHeight="41.0" prefWidth="6.0" />
-      <JFXButton fx:id="btnSendOtp" layoutX="294.0" layoutY="218.0" prefHeight="17.0" prefWidth="176.0" style="-fx-background-color: #3395FF; -fx-background-radius: 10px;" text="Send OTP" textFill="WHITE">
+      <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#1f93ff00" height="294.0" layoutX="347.0" layoutY="99.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.2" width="365.0" />
+      <JFXButton fx:id="btnSendOtp" layoutX="441.0" layoutY="218.0" prefHeight="17.0" prefWidth="176.0" style="-fx-background-color: #3395FF; -fx-background-radius: 10px;" text="Send OTP" textFill="WHITE">
          <font>
             <Font name="Apple LiGothic Medium" size="16.0" />
          </font>
@@ -263,32 +263,32 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <Text layoutX="281.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot Password" wrappingWidth="215.56837463378906">
+      <Text layoutX="428.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot Password" wrappingWidth="215.56837463378906">
          <font>
             <Font name="Apple LiGothic Medium" size="34.0" />
          </font>
       </Text>
-      <JFXTextField fx:id="txtEmail" cache="true" layoutX="258.0" layoutY="177.0" prefHeight="22.0" prefWidth="270.0" promptText="Enter Email Address">
+      <JFXTextField fx:id="txtEmail" cache="true" layoutX="405.0" layoutY="177.0" prefHeight="22.0" prefWidth="270.0" promptText="Enter Email Address">
          <font>
             <Font name="Apple LiGothic Medium" size="15.0" />
          </font>
       </JFXTextField>
-      <JFXPasswordField fx:id="txtPassword" layoutX="259.0" layoutY="268.0" prefHeight="12.0" prefWidth="270.0" promptText="New Password">
+      <JFXPasswordField fx:id="txtPassword" layoutX="406.0" layoutY="268.0" prefHeight="12.0" prefWidth="270.0" promptText="New Password">
          <font>
             <Font name="Apple LiGothic Medium" size="15.0" />
          </font>
       </JFXPasswordField>
-      <Text layoutX="266.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter the email you used to register with" textAlignment="CENTER" wrappingWidth="234.88234907046456">
+      <Text layoutX="413.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter the email you used to register with" textAlignment="CENTER" wrappingWidth="234.88234907046456">
          <font>
             <Font name="Apple LiGothic Medium" size="14.0" />
          </font>
       </Text>
-      <JFXPasswordField fx:id="txtReEnterPassword" layoutX="259.0" layoutY="308.0" prefHeight="12.0" prefWidth="270.0" promptText="Re-Enter New Password">
+      <JFXPasswordField fx:id="txtReEnterPassword" layoutX="406.0" layoutY="308.0" prefHeight="12.0" prefWidth="270.0" promptText="Re-Enter New Password">
          <font>
             <Font name="Apple LiGothic Medium" size="15.0" />
          </font>
       </JFXPasswordField>
-      <JFXButton fx:id="btnReset" layoutX="349.0" layoutY="349.0" prefHeight="17.0" prefWidth="62.0" style="-fx-background-color: #3395FF; -fx-background-radius: 10px;" text="Reset" textFill="WHITE">
+      <JFXButton fx:id="btnReset" layoutX="496.0" layoutY="349.0" prefHeight="17.0" prefWidth="62.0" style="-fx-background-color: #3395FF; -fx-background-radius: 10px;" text="Reset" textFill="WHITE">
          <font>
             <Font name="Apple LiGothic Medium" size="15.0" />
          </font>
@@ -296,10 +296,16 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXTextField fx:id="txtOtp" alignment="TOP_CENTER" cache="true" layoutX="257.0" layoutY="344.0" prefHeight="27.0" prefWidth="81.0" promptText="OTP">
+      <JFXTextField fx:id="txtOtp" alignment="TOP_CENTER" cache="true" layoutX="405.0" layoutY="344.0" prefHeight="27.0" prefWidth="81.0" promptText="OTP">
          <font>
             <Font name="Apple LiGothic Medium" size="15.0" />
          </font>
       </JFXTextField>
+      <ImageView fitHeight="474.0" fitWidth="348.0" layoutX="-5.0" layoutY="-60.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/pexels-liza-summer-6347546.jpg" />
+         </image>
+      </ImageView>
+      <Separator layoutX="622.0" layoutY="442.0" orientation="VERTICAL" prefHeight="41.0" prefWidth="6.0" />
    </children>
 </AnchorPane>
