--- a/main/resources/view/customerDetailsForm.fxml
+++ b/main/resources/view/customerDetailsForm.fxml
@@ -173,17 +173,17 @@
         </Text>
         <ImageView fitHeight="22.0" fitWidth="18.0" layoutX="109.0" layoutY="436.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../img/icons8-email-100.png" />
+                <Image url="@../../../../../../../C#/newpro/src/main/resources/img/icons8-email-100.png" />
             </image>
         </ImageView>
         <ImageView fitHeight="21.0" fitWidth="17.0" layoutX="109.0" layoutY="458.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../img/icons8-location-100.png" />
+                <Image url="@../../../../../../../C#/newpro/src/main/resources/img/icons8-location-100.png" />
             </image>
         </ImageView>
         <ImageView fitHeight="21.0" fitWidth="18.0" layoutX="109.0" layoutY="415.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../img/icons8-phone-100.png" />
+                <Image url="@../../../../../../../C#/newpro/src/main/resources/img/icons8-phone-100.png" />
             </image>
         </ImageView>
         <Text layoutX="128.0" layoutY="428.0" strokeType="OUTSIDE" strokeWidth="0.0" text="+94 123 456 789" textAlignment="CENTER" wrappingWidth="75.69702169093506">
@@ -230,12 +230,12 @@
         </JFXButton>
       <ImageView fitHeight="54.0" fitWidth="39.0" layoutX="696.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../img/icons8-customer-100.png" />
+            <Image url="@../../../../../../../C#/newpro/src/main/resources/img/icons8-customer-100.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="106.0" fitWidth="115.0" layoutX="564.0" layoutY="83.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../img/pngwing.com.png" />
+            <Image url="@../../../../../../../C#/newpro/src/main/resources/img/pngwing.com.png" />
          </image>
       </ImageView>
     </children>
