--- a/main/resources/view/forgotPasswordForm.fxml
+++ b/main/resources/view/forgotPasswordForm.fxml
@@ -69,17 +69,17 @@
       </Text>
       <ImageView fitHeight="13.0" fitWidth="12.0" layoutX="633.0" layoutY="455.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../img/icons8-email-100.png" />
+            <Image url="@../../../../../../../C#/newpro/src/main/resources/img/icons8-email-100.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="14.0" fitWidth="12.0" layoutX="633.0" layoutY="469.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../img/icons8-location-100.png" />
+            <Image url="@../../../../../../../C#/newpro/src/main/resources/img/icons8-location-100.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="11.0" fitWidth="16.0" layoutX="633.0" layoutY="442.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../img/icons8-phone-100.png" />
+            <Image url="@../../../../../../../C#/newpro/src/main/resources/img/icons8-phone-100.png" />
          </image>
       </ImageView>
       <Text layoutX="642.0" layoutY="450.0" strokeType="OUTSIDE" strokeWidth="0.0" text="+94 123 456 789" textAlignment="CENTER" wrappingWidth="69.35809346827881">
@@ -231,7 +231,7 @@
       </Text>
       <ImageView fitHeight="21.0" fitWidth="26.0" layoutX="447.0" layoutY="455.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../img/icons8-instagram-200(-xxxhdpi).png" />
+            <Image url="@../../../../../../../C#/newpro/src/main/resources/img/icons8-instagram-200(-xxxhdpi).png" />
          </image>
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -239,7 +239,7 @@
       </ImageView>
       <ImageView fitHeight="21.0" fitWidth="28.0" layoutX="400.0" layoutY="455.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../img/icons8-facebook-200(-xxxhdpi).png" />
+            <Image url="@../../../../../../../C#/newpro/src/main/resources/img/icons8-facebook-200(-xxxhdpi).png" />
          </image>
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -247,7 +247,7 @@
       </ImageView>
       <ImageView fitHeight="21.0" fitWidth="26.0" layoutX="424.0" layoutY="455.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../img/icons8-linkedin-200(-xxxhdpi).png" />
+            <Image url="@../../../../../../../C#/newpro/src/main/resources/img/icons8-linkedin-200(-xxxhdpi).png" />
          </image>
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -303,7 +303,7 @@
       </JFXTextField>
       <ImageView fitHeight="474.0" fitWidth="348.0" layoutX="-5.0" layoutY="-60.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../img/pexels-liza-summer-6347546.jpg" />
+            <Image url="@../../../../../../../C#/newpro/src/main/resources/img/pexels-liza-summer-6347546.jpg" />
          </image>
       </ImageView>
       <Separator layoutX="622.0" layoutY="442.0" orientation="VERTICAL" prefHeight="41.0" prefWidth="6.0" />
