--- a/main/resources/view/placeOrderForm.fxml
+++ b/main/resources/view/placeOrderForm.fxml
@@ -230,22 +230,22 @@
         </Text>
         <ImageView fitHeight="41.0" fitWidth="40.0" layoutX="678.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../img/icons8-place-order-96.png" />
+                <Image url="@../../../../../../../C#/newpro/src/main/resources/img/icons8-place-order-96.png" />
             </image>
         </ImageView>
         <ImageView fitHeight="22.0" fitWidth="18.0" layoutX="109.0" layoutY="436.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../img/icons8-email-100.png" />
+                <Image url="@../../../../../../../C#/newpro/src/main/resources/img/icons8-email-100.png" />
             </image>
         </ImageView>
         <ImageView fitHeight="21.0" fitWidth="17.0" layoutX="109.0" layoutY="458.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../img/icons8-location-100.png" />
+                <Image url="@../../../../../../../C#/newpro/src/main/resources/img/icons8-location-100.png" />
             </image>
         </ImageView>
         <ImageView fitHeight="21.0" fitWidth="18.0" layoutX="109.0" layoutY="415.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../img/icons8-phone-100.png" />
+                <Image url="@../../../../../../../C#/newpro/src/main/resources/img/icons8-phone-100.png" />
             </image>
         </ImageView>
         <Text layoutX="128.0" layoutY="427.0" strokeType="OUTSIDE" strokeWidth="0.0" text="+94 123 456 789" textAlignment="CENTER" wrappingWidth="75.69702169093506">
